@@ -12,6 +12,7 @@ ChangeLog for ARQ
   Add %-sequences, \char sequences and ':' to local part of prefixed names.
   NB.  The characters 123. are now an integer 123 and a DOT; they were a decimal, and no DOT.  
 + RIOT tokenizing now records the subtokens for language and datatype literals.   
++ JENA-345 : execConstructTriples() now excludes malformed triples (e.g. literal subjects) from it's output
 
 ==== ARQ 2.9.4
 
